feat: add mobile layout

--- a/style.css
+++ b/style.css
@@ -14,11 +14,112 @@
 }
 
 body {
-  background: var(--background);
+  background: var(--background) url(./assets/blur-mobile.png) no-repeat top/cover;
   height: 100vh;
 }
 
 body * {
   font-family: 'Manrope', sans-serif;
   color: var(--text-color);
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+header {
+  padding: 37px 25px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid var(--border);
+}
+
+main {
+  position: relative;
+}
+
+h1 {
+  margin: 88px 28px;
+  text-align: center;
+}
+
+button {
+  cursor: pointer;
+  text-transform: uppercase;
+
+  border: 1px solid var(--button);
+  border-radius: 6px;
+  background: transparent;
+
+  font-size: 11px;
+  font-weight: 800;
+  letter-spacing: 0.22px;
+
+  padding: 10px 30px;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.titles {
+  margin: 98px auto 25px;
+
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: -1.5px;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+}
+
+.shadow-title {
+  color: initial;
+  text-shadow: -1px -1px 0 var(--button), 1px -1px 0 var(--button), -1px 1px 0 var(--button), 1px 1px 0 var(--button);
+}
+
+.rocket-coffee-img {
+  width: 100vw;
+}
+
+.menu-mobile {
+  position: absolute;
+  z-index: 1;
+  top: -62px;
+
+  width: 100vw;
+  height: 100vh;
+  background: var(--background);
+}
+
+.menu-mobile ul li {
+  padding: 16px 31px;
+  font-size: 18px;
+  border-bottom: 1px solid var(--border);
+}
+
+.menu-mobile ul li a {
+  color: var(--border-menu-mobile);
+}
+
+.menu-mobile ul li:first-child {
+  padding: 16px 26px;
+  border-top: 1px solid var(--border);
+  border-left: 5px solid var(--button);
+  font-weight: 700;
+}
+
+.menu-mobile ul li a:first-child {
+  color: var(--text-color-menu-mobile);
 }
