--- a/style.css
+++ b/style.css
@@ -73,6 +73,12 @@ button {
   align-items: center;
   justify-content: center;
   gap: 10px;
+
+  transition: background 0.2s;
+}
+
+button:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .titles {
